# vikalp-bot

./: # 1 to 1 Math Classes  .env.example  .gitignore  README.md  nixpacks.toml  prompting_strategy.md  pyproject.toml  railway.json  render.yaml  start-backend.sh  support.md
backend/: .env.example  DEPLOY.md  requirements.txt
backend/app/: db.py  grade_context.py  main.py  prompting.py  realtime_handler.py  session_manager.py  stt.py  suggestions.py  voice_config.py  voice_openai.py
backend/course_data/: ClassicalDance.md  ClassicalMusic.md  Coding.md  ComputerScience.md  ForeignLanguages.md  HobbyClasses.md  IndianLanguages.md  MathScience.md  OneToOneMath.md  Phonics.md  PublicSpeaking.md  Yoga.md
backend/grade_data/: Grade1.md  Grade10.md  Grade11.md  Grade12.md  Grade2.md  Grade3.md  Grade4.md  Grade5.md  Grade6.md  Grade7.md  Grade8.md  Grade9.md  LKG.md  Nursery.md  UKG.md
frontend/: .env.production.example  next.config.mjs  package-lock.json  package.json  postcss.config.mjs
frontend/public/: manifest.json  offline.html  sw.js
frontend/src/app/: globals.css  globals.css.bak  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/: ConversationSuggestions.tsx  CourseSelection.tsx  GradeSelection.tsx  LeadCaptureModal.tsx  VoiceChatInterface.tsx  VoiceControls.tsx
